# TextThumb

./: LICENSE  README.md  TextThumb.cabal  stack.yaml
src/: FileContent.hs  Main.hs  Thumbnails.hs
